partner access fixed